--- a/index.html
+++ b/index.html
@@ -3,33 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Liepāja</title>
 </head>
 <body>
     <header></header>
     <main></main>
     <!-- 1st level heading  -->
-    <h1></h1>
+    <h1>Liepāja – my favorite place</h1>
+    <h2>W</h2>
+    <p>Liepaja, Latvia, is a vibrant coastal city that has woven its way into the fabric of my fondest memories.</p>
+    <!-- image -->
     <h2></h2>
     <p></p>
+    <!-- image -->
     <h2></h2>
     <p></p>
-    <h2></h2>
-    <p></p>
-    <!-- at least 2 images -->
-    <h2></h2>
+    <!-- image -->
+    <h3>Plays I have seen in the Liepāja Theatre:</h3>
     <!-- at least one unordered list -->
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>"Jasmīns" by Inga Ābele, directed by Dmitrijs Petrenko</li>
+        <li>"Šekspīrs" by William Shakespeare and Rasa Bugavičute-Pēce, directed by Elmārs Seņkovs</li>
+        <li>"Grimmi" (not really) by Brothers Grimm, directed by Elmārs Seņkovs</li>
+        <li>"Grieķi" directed by Elmārs Seņkovs</li>
+        <li>"Patakoļako un teātra visums" by Rasa Bugavičute-Pēce, directed by Mārtiņš Kalita</li>
     </ul>
     <!-- at least one ordered list -->
+    <h3>My favorite places to eat when in Liepāja:</h3>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>"Darbnīca", Lielā iela 8</li>
+        <li>"Teika", Lielā iela 7</li>
+        <li>"Pumpurs Māja", Peldu iela 54</li>
+        <li>"Hot Potato", Kūrmājas prospekts 7</li>
     </ol>
     <!-- at least one link to an outside source -->
     <a href="*here*">*text*</a>
