some paragraphs and links

--- a/index.html
+++ b/index.html
@@ -13,12 +13,28 @@
     <h2>W</h2>
     <p>Liepaja, Latvia, is a vibrant coastal city that has woven its way into the fabric of my fondest memories.</p>
     <!-- image -->
-    <h2></h2>
-    <p></p>
+    <p>As soon as I set foot in Liepaja, I'm greeted by the refreshing sea breeze and the sound of waves crashing against the shore. 
+        The city's long stretches of sandy beaches invite me to wander along the coast, soaking in the panoramic views of the Baltic Sea.</p>
     <!-- image -->
-    <h2></h2>
-    <p></p>
+    <!-- at least one link to an outside source -->
+    <p>But Liepaja is more than just a picturesque seaside destination — it's a living museum of architectural wonders.
+        The city's streets are lined with an eclectic mix of buildings, from elegant Art Nouveau masterpieces to charming wooden houses adorned with intricate carvings.
+        Each corner reveals a piece of Liepaja's rich history, offering a glimpse into its storied past as a bustling port town.
+        A guided tour is offered every Sunday. You can find out more about it <a href="https://liepaja.travel/darit-un-redzet/pastaigas-vecpilseta-gida-pavadiba/">here</a>.</p>
     <!-- image -->
+    <p>One of the highlights of Liepaja is its vibrant arts scene, which pulsates with creativity and expression. 
+        The city is home to numerous galleries, theaters, and cultural centers where local artists showcase their talents in painting, sculpture, music, and more. 
+        Every visit to Liepaja is an opportunity to immerse myself in its dynamic cultural landscape, discovering new talents and perspectives along the way. 
+        One of the galleries to visit in Liepāja – <a href="https://galerijaromasdarzs.lv/izstades/">Romas dārzs</a>.</p>
+    <!-- image -->
+    <!-- at least one internal link -->
+    <p>Of course, no visit to Liepaja would be complete without indulging in its culinary delights. 
+        The city's restaurants and cafes serve up a tantalizing array of dishes that showcase the best of Latvian cuisine, from hearty seafood stews to delicate pastries filled with sweet berries. 
+        Every meal is a celebration of flavor and tradition, leaving me eager to explore more of Liepaja's culinary treasures.
+        Check out my favorite eateries <a href="#food">below</a>.</p>
+    <p>Whether I'm strolling along the beach, immersing myself in the city's rich history, or indulging in its vibrant cultural scene, Liepaja never fails to captivate me with its charm and allure. 
+        It's a place where the past meets the present, and every moment is filled with wonder and discovery.</p>
+    <h2>My recommendations</h2>
     <h3>Plays I have seen in the Liepāja Theatre:</h3>
     <!-- at least one unordered list -->
     <ul>
@@ -29,16 +45,13 @@
         <li>"Patakoļako un teātra visums" by Rasa Bugavičute-Pēce, directed by Mārtiņš Kalita</li>
     </ul>
     <!-- at least one ordered list -->
-    <h3>My favorite places to eat when in Liepāja:</h3>
+    <h3 id="food">My favorite places to eat when in Liepāja:</h3>
     <ol>
         <li>"Darbnīca", Lielā iela 8</li>
         <li>"Teika", Lielā iela 7</li>
         <li>"Pumpurs Māja", Peldu iela 54</li>
         <li>"Hot Potato", Kūrmājas prospekts 7</li>
     </ol>
-    <!-- at least one link to an outside source -->
-    <a href="*here*">*text*</a>
-    <!-- at least one internal link -->
     <footer></footer>
 </body>
 </html>
