getting ready for images

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <main></main>
     <!-- 1st level heading  -->
     <h1>Liepāja – my favorite place</h1>
-    <h2>W</h2>
+    <h2>Why Liepāja?</h2>
     <p>Liepaja, Latvia, is a vibrant coastal city that has woven its way into the fabric of my fondest memories.</p>
-    <!-- image -->
     <p>As soon as I set foot in Liepaja, I'm greeted by the refreshing sea breeze and the sound of waves crashing against the shore. 
         The city's long stretches of sandy beaches invite me to wander along the coast, soaking in the panoramic views of the Baltic Sea.</p>
     <!-- image -->
@@ -20,12 +19,12 @@
     <p>But Liepaja is more than just a picturesque seaside destination — it's a living museum of architectural wonders.
         The city's streets are lined with an eclectic mix of buildings, from elegant Art Nouveau masterpieces to charming wooden houses adorned with intricate carvings.
         Each corner reveals a piece of Liepaja's rich history, offering a glimpse into its storied past as a bustling port town.
-        A guided tour is offered every Sunday. You can find out more about it <a href="https://liepaja.travel/darit-un-redzet/pastaigas-vecpilseta-gida-pavadiba/">here</a>.</p>
+        A guided tour is offered every Sunday. You can find out more about it <a href="https://liepaja.travel/darit-un-redzet/pastaigas-vecpilseta-gida-pavadiba/" target="_blank">here</a>.</p>
     <!-- image -->
     <p>One of the highlights of Liepaja is its vibrant arts scene, which pulsates with creativity and expression. 
         The city is home to numerous galleries, theaters, and cultural centers where local artists showcase their talents in painting, sculpture, music, and more. 
         Every visit to Liepaja is an opportunity to immerse myself in its dynamic cultural landscape, discovering new talents and perspectives along the way. 
-        One of the galleries to visit in Liepāja – <a href="https://galerijaromasdarzs.lv/izstades/">Romas dārzs</a>.</p>
+        One of the galleries to visit in Liepāja – <a href="https://galerijaromasdarzs.lv/izstades/" target="_blank">Romas dārzs</a>.</p>
     <!-- image -->
     <!-- at least one internal link -->
     <p>Of course, no visit to Liepaja would be complete without indulging in its culinary delights. 
