--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         <li>"Pumpurs Māja", Peldu iela 54</li>
         <li>"Hot Potato", Kūrmājas prospekts 7</li>
     </ol>
+    <h3>Explore Liepaja Yourself!</h3>
+    <iframe width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=20.71128845214844%2C56.42909214439102%2C21.237258911132812%2C56.65245208058013&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/#map=11/56.5409/20.9743">Skatīt lielāku karti</a></small>
     <hr>
     <footer>
         2024
