--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <b>Text & photos by M. Bolsteins.</b>
+        <b>Text & photos by M. Bolsteins</b>
     </header>
     <main></main>
     <!-- 1st level heading  -->
