--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <li>"Hot Potato", Kūrmājas prospekts 7</li>
     </ol>
     <h3>Explore Liepaja Yourself!</h3>
-    <iframe width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=20.85960388183594%2C56.48126415285958%2C21.12258911132813%2C56.592955218835364&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/#map=12/56.5372/20.9911">Skatīt lielāku karti</a></small>
+    <iframe width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=20.85960388183594%2C56.48126415285958%2C21.12258911132813%2C56.592955218835364&amp;layer=mapnik" style="border: 1px solid black"></iframe><br><small><a href="https://www.openstreetmap.org/#map=12/56.5372/20.9911">Skatīt lielāku karti</a></small>
     <hr>
     <footer>
         2024
